<resources>
    <string name="app_name">Team Builder</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="pref_title">Settings</string>

    <string name="loading_error_msg">Could not load from Pokeapi.co. Please check the internet connection, and try again.</string>
    <string name="loading_msg_short">Loading…</string>
    <string name="loading_error_button">Refresh</string>

    <!-- Misc -->
    <string name="action_select_poke">"Select a Pokémon"</string>
    <string name="placeholder_pokemon_name">Pokémon</string>

    <!-- Pokemon Item info -->
    <string name="team_id_string">UniqueTeamString</string>
    <string name="poke_icon_desc">Pokémon Icon</string>
    <string name="type_seperator" translatable="false"> / </string>

    <!-- Team Type info -->
    <string name="type_name">Type</string>
    <string name="type_weak">Weak</string>
    <string name="type_strong">Strong</string>
    <string name="type_title">Type Analysis</string>

    <!-- Move details -->
    <string name="move_type">Type</string>
    <string name="move_pp">PP</string>
    <string name="move_power">Power</string>
    <string name="move_accuracy">Acc</string>
    <string name="move_accyracy_long">Accuracy</string>
    <string name="move_type_class">Type1 / Type2</string>
    <string name="move_moves">Moves</string>

    <!-- Search -->
    <string name="action_pokemon_list_search">Pokémon Name or Pokédex ID</string>
    <string name="action_search_title">Search</string>
    <string name="action_search_submit">Submit</string>
    <string name="action_search_cancel">Cancel</string>
    <string name="pokemon_search_not_found">Search did not find any Pokémon with that query</string>

    <!-- sort order -->
    <string name="pref_sort_key" translatable="false">pref_sort</string>
    <string name="pref_sort_title">Sort By</string>
    <string name="pref_sort_entry_sort_by_id">Pokémon ID Number</string>
    <string name="pref_sort_value_sort_by_id" translatable="false">id</string>
    <string name="pref_sort_entry_sort_by_name">Name</string>
    <string name="pref_sort_value_sort_by_name" translatable="false">name</string>
    <string name="pref_sort_default">@string/pref_sort_value_sort_by_id</string>

    <!-- if showing images -->
    <string name="pref_image_key" translatable="false">pref_image</string>
    <string name="pref_image_title">Show Images</string>
    <string name="pref_image_summary">Download and show sprites</string>

    <!-- if showing Pokemon > 10000 -->
    <string name="pref_limit_key" translatable="false">pref_limit</string>
    <string name="pref_limit_summary">Do not show Pokémon IDs greater than 10,000</string>
    <string name="pref_limit_title">Limit IDs</string>

    <!-- PokeAPI rate limiting data -->
    <string name="pref_pokeapi_limiter_permits_key" translatable="false">pref_pokeapi_limiter_permits</string>
    <string name="pref_pokeapi_limiter_permits_default" translatable="false">1000</string>
    <string name="pref_pokeapi_limiter_release_timestamp_key" translatable="false">pref_pokeapi_limiter_release_timestamp</string>
    
    <!-- Share actions -->
    <string name="action_browser">Open in Bulbapedia</string>
    <string name="action_veekun">Open in Veekun</string>
    <string name="action_share_poke">Share PokéDetails</string>
    <string name="share_chooser_poke_details">Share Pokémon details</string>
    <string name="action_share_team">Share Team Details</string>


    <string name="activity_team_detail_title">Team Detail</string>
    <string name="create_team_hint_text">New team name</string>
    <string name="create_team_title">New team</string>
    <string name="delete_team_name_text">Delete team "%s"?</string>
    <string name="delete_team_id_text">Delete team %d?</string>

</resources>
