<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_title">
    <!-- Sort Preference -->
    <ListPreference
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_sort_title"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default" />

    <!-- Image On/Off -->
    <CheckBoxPreference
        android:key="@string/pref_image_key"
        android:title="@string/pref_image_title"
        android:summary="@string/pref_image_summary"
        android:defaultValue="true" />

</PreferenceScreen>