<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_pokemon_detail_artwork"
                android:layout_width="154dp"
                android:layout_height="154dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_poke_unknown"/>

            <!--
            <ImageView
                android:id="@+id/iv_pokemon_detail_front_small"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_poke_unknown" />

            <ImageView
                android:id="@+id/iv_pokemon_detail_back_small"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:layout_toRightOf="@+id/iv_pokemon_detail_artwork"
                android:layout_toEndOf="@+id/iv_pokemon_detail_artwork"
                android:layout_below="@+id/iv_pokemon_detail_front_small"
                android:src="@drawable/ic_poke_unknown" /> -->

            <TextView
                android:id="@+id/tv_pokemon_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_toRightOf="@+id/iv_pokemon_detail_artwork"
                android:layout_toEndOf="@+id/iv_pokemon_detail_artwork"
                android:textSize="22sp"
                android:text="@string/placeholder_pokemon_name"/>

            <TextView
                android:id="@+id/tv_pokemon_detail_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:minWidth="12dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textSize="22sp"
                android:text="0"/>

            <TextView
                android:id="@+id/tv_pokemon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_toRightOf="@+id/iv_pokemon_detail_artwork"
                android:layout_below="@id/tv_pokemon_detail_name"
                android:textSize="22sp"
                android:text="@string/move_type_class"/>

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/tv_pokemon_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/item_move_type"
                android:layout_toStartOf="@+id/item_move_type"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="16sp"
                android:text="@string/move_moves"/>

            <TextView
                android:id="@+id/item_move_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/item_move_pp"
                android:layout_toStartOf="@+id/item_move_pp"
                android:layout_centerInParent="true"
                android:minWidth="80dp"
                android:textSize="16sp"
                android:text="@string/move_type"/>

            <TextView
                android:id="@+id/item_move_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/item_move_power"
                android:layout_toStartOf="@+id/item_move_power"
                android:layout_centerInParent="true"
                android:minWidth="30dp"
                android:textSize="16sp"
                android:text="@string/move_pp"/>

            <TextView
                android:id="@+id/item_move_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/item_move_accuracy"
                android:layout_toStartOf="@+id/item_move_accuracy"
                android:layout_centerInParent="true"
                android:minWidth="55dp"
                android:textSize="16sp"
                android:text="@string/move_power"/>

            <TextView
                android:id="@+id/item_move_accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:minWidth="40dp"
                android:textSize="16sp"
                android:text="@string/move_accuracy"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:clipToPadding="false"
            android:visibility="visible"
            android:id="@+id/rv_moves" />
    </LinearLayout>

    <!-- force at bottom -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/item_add_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:visibility="invisible"
            app:fabSize="normal"
            android:elevation="6dp"
            android:src="@drawable/ic_action_add"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</RelativeLayout>